--- a/sample_vm_info_playbook.yml
+++ b/sample_vm_info_playbook.yml
@@ -5,10 +5,12 @@
   tasks:
   - name: run the vm_info module
     scale_computing.hc3.vm_info:
-      host: 'https://10.5.11.30'
-      username: 'admin'
-      password: 'admin'
-      #uuid: 'f0c91f97-cbfc-40f8-b918-ab77ae8ea7fb'	#used to filter based on UUID of virtual device
+      cluster_instance:
+        host: 'https://10.5.11.30'
+        username: 'admin'
+        password: 'admin'
+      #uuid: '2e36ee02-5f97-4f93-a966-bde5beda796e'	#used to filter based on UUID of virtual device
+      #name: 'XLAB-POST-Domen'
     register: testout
  
   - name: output the HTTP request results
