added: - sample playbooks for US-11 and US-12 examples -added onto serialize logic -added mac in find_net_dev method -restructured check_state_decide_action function

--- a/sample_vm_playbook.yml
+++ b/sample_vm_playbook.yml
@@ -17,7 +17,7 @@
         host: 'https://10.5.11.30'
         username: 'admin'
         password: 'admin'
-      name: XLAB-demo-vm
+      name: XLAB-us11-example6
       description: Demo VM
       power_state: shutdown
       state: present
