--- a/sample_us11_example1_playbook.yml
+++ b/sample_us11_example1_playbook.yml
@@ -1,7 +1,7 @@
 - name: US11 - As a user I want to be able to add, update and remove VNICs so that I can reconfigure the networking
   hosts: localhost
   tasks:
-  - name: Set NIC interfaces
+  - name: Set NIC interface
     scale_computing.hc3.vm_nic:
       cluster_instance:
           host: 'https://10.5.11.30'
