--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .pyc
 tests/output
 *.tar.gz
+
+# integration_config.yml contains connection info for the
+# developer instance, including credentials
+/tests/integration/integration_config.yml
