--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 image: python:3.8.12-slim-buster  # TODO gitlab registry
 
+# TODO reuse Makefile - "make sanity", and docker dind.
+
 variables:
   SC_HOST: https://10.5.11.30
   SC_USERNAME: admin
