--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,16 +12,6 @@ stages:
   - build  # build collection tar.gz
   - deploy  # push collection tar.gz to galaxy
 
-# Just check if any .py file would be changed by black
-check_format:
-  stage: test
-  image: python:3.8.12-slim-buster
-  before_script:
-    # TODO bake this into our dedicated test image
-    - pip3 install -r sanity.requirements -r test.requirements
-  script:
-    - black -t py27 plugins tests/unit --check
-
 coverage:
   stage: test
   image: python:3.8.12-slim-buster
@@ -68,6 +58,10 @@ sanity:
     - cp -a ./  /work-dir/ansible_collections/scale_computing/hc3
     - pushd /work-dir/ansible_collections/scale_computing/hc3
     #
+    # Same as "make sanity"
+    # TODO reuse Makefile
+    - black -t py27 --check --diff --color plugins tests/unit
+    - flake8
     - ansible-test sanity
 
 integration:
