Use stdout_callback=community.general.yaml for local testing

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,7 @@
+# This ansible.cfg is used only for local testing during development.
+# It should not be included into final collection.
 [defaults]
+stdout_callback     = community.general.yaml
+retry_files_enabled = False
+forks               = 16
 collections_paths = ../../../
