--- a/sample_us11_example4_playbook.yml
+++ b/sample_us11_example4_playbook.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   tasks:
   - name: Remove one NIC interface
-    scale_computing.hc3.vm_nic:
+    scale_computing.hypercore.vm_nic:
       cluster_instance:
           host: 'https://10.5.11.30'
           username: 'admin'
