--- a/sample_vm_nic_playbook.yml
+++ b/sample_vm_nic_playbook.yml
@@ -2,7 +2,7 @@
   hosts: localhost  
   tasks:
   - name: Create nic #We leave MAC address blank, it auto-generates
-    scale_computing.hc3.vm_nic:
+    scale_computing.hypercore.vm_nic:
       cluster_instance:
         host: 'https://10.5.11.30'
         username: 'admin'
