--- a/sample_vm_playbook.yml
+++ b/sample_vm_playbook.yml
@@ -6,12 +6,12 @@
     key: value
   tasks:
   - name: Create VM
-    scale_computing.hc3.vm:
-      # Get HC3 host and related parameters (username, password, anything else?)
+    scale_computing.hypercore.vm:
+      # Get HyperCore host and related parameters (username, password, anything else?)
       # from env or as module parameter.
       # We need to define the env variables names.
-      # HC3_x or SCALE_ or SCALE_COMPUTING_ or SCALE_HC3_?
-      # HC3_API_URL, HC3_API_USERNAME, HC3_API_PASSWORD
+      # HyperCore_x or SCALE_ or SCALE_COMPUTING_ or SCALE_HyperCore_?
+      # HyperCore_API_URL, HyperCore_API_USERNAME, HyperCore_API_PASSWORD
       # Later we wil have also username/password for SMB access.
       cluster_instance:
         host: 'https://10.5.11.30'
@@ -33,7 +33,7 @@
       nics:
         - vlan: 0
           type: RTL8139
-      attachGuestToolsISO: true  # default false (same as HC3)
+      attachGuestToolsISO: true  # default false (same as HyperCore)
       boot_devices:
         - type: disk  # real disk
           name/slot/id: 0
