--- a/tests/integration/targets/api/tasks/main.yml
+++ b/tests/integration/targets/api/tasks/main.yml
@@ -6,13 +6,13 @@
 
   block:
     - name: Retrieve all VMs
-      scale_computing.hc3.api: &retrieve-all-vms
+      scale_computing.hypercore.api: &retrieve-all-vms
         action: get
         endpoint: /rest/v1/VirDomain
       register: initial
 
     - name: Create a VM
-      scale_computing.hc3.api:
+      scale_computing.hypercore.api:
         action: post
         endpoint: /rest/v1/VirDomain
         data:
@@ -44,14 +44,14 @@
         seconds: 3
 
     - name: Retrieve all VMs after creating a new resource
-      scale_computing.hc3.api: *retrieve-all-vms
+      scale_computing.hypercore.api: *retrieve-all-vms
       register: result
     - ansible.builtin.assert:
         that:
           - result.record | length == initial.record | length + 1
 
     - name: Update the VM
-      scale_computing.hc3.api:
+      scale_computing.hypercore.api:
         action: patch
         endpoint: /rest/v1/VirDomain/{{vm_created.record.createdUUID}}
         data:
@@ -59,7 +59,7 @@
       register: vm_updated
 
     - name: Verify VM's description has been modified
-      scale_computing.hc3.api:
+      scale_computing.hypercore.api:
         action: get
         endpoint: /rest/v1/VirDomain/{{vm_created.record.createdUUID}}
       register: result
@@ -68,7 +68,7 @@
           - result.record.0.description == "updated description"
 
     - name: Verify that record has been deleted
-      scale_computing.hc3.api:
+      scale_computing.hypercore.api:
         action: delete
         endpoint: /rest/v1/VirDomain/{{vm_created.record.createdUUID}}
       register: result
