Rename vm_nic module param from mac_address_new to mac_new
We want to be consistent with vlan vs vlan_new.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/sample_us11_example7_playbook.yml
+++ b/sample_us11_example7_playbook.yml
@@ -12,7 +12,7 @@
         - vlan: 1
           mac: 7C:4C:58:C7:13:95
           vlan_new: 10
-          mac_address_new: 01:23:45:67:89:ab
+          mac_new: 01:23:45:67:89:ab
           type: virtio
       state: present
     loop:
