--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,9 @@ image: python:3.8.12-slim-buster  # TODO gitlab registry
 # TODO reuse Makefile - "make sanity", and docker dind.
 
 variables:
-  SC_HOST: https://10.5.11.30
+  # SC_HOST: https://10.5.11.30  # provide value in gitlab CI/CD settings
   SC_USERNAME: admin
-  # SC_PASSWORD: provide value in gitlab CI/CD settings
+  # SC_PASSWORD:  # provide value in gitlab CI/CD settings
 
 stages:
   - test
