Ignore auto-generated inventory file
tests/integration/inventory is created by `ansible-test integration`

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ tests/output
 
 # integration_config.yml contains connection info for the
 # developer instance, including credentials
-/tests/integration/integration_config.yml
+tests/integration/integration_config.yml
+tests/integration/inventory
