--- a/tests/integration/targets/vm_replication_info/tasks/main.yml
+++ b/tests/integration/targets/vm_replication_info/tasks/main.yml
@@ -5,6 +5,8 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   block:
+# -------------------------------------------------------------------------
+# Create 1st VM
     - name: Delete XLAB-vm_replication_info_CI_test
       scale_computing.hypercore.vm: &delete-XLAB-vm_nic_CI_test
         vm_name: XLAB-vm_replication_info_CI_test
@@ -25,7 +27,6 @@
             blockDevs:
               - type: VIRTIO_DISK
                 capacity: 8100100100
-                name: jc1-disk-0
             netDevs:
               - type: RTL8139
                 vlan: 0
@@ -41,7 +42,46 @@
     - name: Wait for the VM to be created
       scale_computing.hypercore.task_wait:
         task_tag: "{{ vm_created.record }}"
-  
+
+# -------------------------------------------------------------------------
+# Create 2nd VM
+    - name: Delete XLAB-vm2_replication_info_CI_test
+      scale_computing.hypercore.vm: &delete-XLAB-vm2_nic_CI_test
+        vm_name: XLAB-vm2_replication_info_CI_test
+        state: absent
+        memory: 536870912
+        vcpu: 2
+
+    - name: Create a VM2
+      scale_computing.hypercore.api:
+        action: post
+        endpoint: /rest/v1/VirDomain
+        data:
+          dom:
+            name: XLAB-vm2_replication_info_CI_test
+            tags: Xlab,CI,test,vm_replication_info
+            mem: 512100100
+            numVCPU: 2
+            blockDevs:
+              - type: VIRTIO_DISK
+                capacity: 8100100100
+            netDevs:
+              - type: RTL8139
+                vlan: 0
+                connected: true
+          options:
+            attachGuestToolsISO: true
+      register: vm2_created
+    - ansible.builtin.assert:
+        that:
+          - vm2_created is succeeded
+          - vm2_created is changed
+
+    - name: Wait for the VM2 to be created
+      scale_computing.hypercore.task_wait:
+        task_tag: "{{ vm2_created.record }}"
+
+# -------------------------------------------------------------------------
     - name: Get available cluster connection
       scale_computing.hypercore.api:
         action: get
@@ -52,6 +92,7 @@
           - cluster_connection_info is succeeded
           - cluster_connection_info.record | length > 0
   
+# -------------------------------------------------------------------------
     - name: Create replication
       scale_computing.hypercore.api:
         action: post
@@ -70,7 +111,8 @@
     - name: Wait for the replication to be created
       scale_computing.hypercore.task_wait:
         task_tag: "{{ replication_created.record }}"
-  
+# -------------------------------------------------------------------------
+
     - name: Get replication info for one VM
       scale_computing.hypercore.vm_replication_info:
         vm_name: XLAB-vm_replication_info_CI_test
@@ -85,6 +127,27 @@
           - replication_info.records[0].remote_cluster == "{{ cluster_connection_info.record.0.uuid }}"  # TODO replace with remoteClusterInfo.clusterName
           - replication_info.records[0].remote_cluster  # == "{{ cluster_connection_info.record.0.remoteClusterInfo.clusterName }}"  # after
 
+# -------------------------------------------------------------------------
+    - name: Create replication for VM2
+      scale_computing.hypercore.api:
+        action: post
+        endpoint: /rest/v1/VirDomainReplication
+        data:
+          sourceDomainUUID: "{{ vm2_created.record.createdUUID }}"
+          connectionUUID: "{{ cluster_connection_info.record.0.uuid }}"
+          enable: true
+          label: "vm2_replication_info test"
+      register: replication_created
+    - ansible.builtin.assert:
+        that:
+          - vm2_replication_created is succeeded
+          - vm2_replication_created is changed
+
+    - name: Wait for the VM2 replication to be created
+      scale_computing.hypercore.task_wait:
+        task_tag: "{{ vm2_replication_created.record }}"
+
+# -------------------------------------------------------------------------
     - name: Get replication info for all VMs
       scale_computing.hypercore.vm_replication_info:
       register: replication_info_all
@@ -92,13 +155,24 @@
         that:
           - replication_info_all is succeeded
           - replication_info_all is not changed
-          - replication_info_all.records | length >= 1
+          - replication_info_all.records | length >= 2
           - replication_info.records[0].vm_name
           - replication_info.records[0].state in ['enabled', 'disabled']
           - replication_info.records[0].remote_cluster
+          - replication_info.records[1].vm_name
+          - replication_info.records[1].state in ['enabled', 'disabled']
+          - replication_info.records[1].remote_cluster
 
     - name: Delete XLAB-vm_replication_info_CI_test
       scale_computing.hypercore.vm: *delete-XLAB-vm_nic_CI_test
+      register: output
+    - ansible.builtin.assert:
+        that:
+          - output is succeeded
+          - output is changed
+
+    - name: Delete XLAB-vm2_replication_info_CI_test
+      scale_computing.hypercore.vm: *delete-XLAB-vm2_nic_CI_test
       register: output
     - ansible.builtin.assert:
         that:
