--- a/sample_us21_example2_playbook.yml
+++ b/sample_us21_example2_playbook.yml
@@ -7,7 +7,7 @@
           host: 'https://10.5.11.30'
           username: 'admin'
           password: 'admin'
-      vm_name: XLAB-demo-vm-clone
+      vm_name: XLAB-POST-TEST
     register: testout
 
   - name: output the HTTP request results
