--- a/sample_vm_replication_playbook.yml
+++ b/sample_vm_replication_playbook.yml
@@ -16,6 +16,12 @@
         host: 'https://10.5.11.30'
         username: 'admin'
         password: 'admin'
-      vm_name: XLAB-POST-TEST
+      vm_name: XLAB-jc1
       remote_cluster: '891f482a-8f5f-4755-bea4-bbcc338f566f'
-      state: reenabled  # choices [enabled|disabled|reenabled]
+      state: enabled  # choices [enabled|disabled|reenabled]
+    register: testout
+
+  - name: output the HTTP request results
+    debug:
+      var: testout
+      
