--- a/tests/integration/targets/vm_nic_info/tasks/main.yml
+++ b/tests/integration/targets/vm_nic_info/tasks/main.yml
@@ -21,7 +21,7 @@
       scale_computing.hypercore.vm:
         vm_name: XLAB-vm_nic_info_CI_test
         description: Demo VM
-        power_state: shutdown
+        power_state: stopped
         state: present
         tags:
           - 'Xlab'
