--- a/tests/integration/targets/vm_replication/tasks/main.yml
+++ b/tests/integration/targets/vm_replication/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - environment:
-    SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
+    SC_HOST: "https://10.5.11.30"
+    SC_USERNAME: "admin"
+    SC_PASSWORD: "admin"
 
   block:
     - name: Delete XLAB-vm_replication_CI_test
@@ -62,10 +62,6 @@
         that:
           - replication_created is succeeded
           - replication_created is changed
-  
-    - name: Wait for the replication to be created
-      scale_computing.hypercore.task_wait:
-        task_tag: "{{ replication_created.debug_task_tag }}"
   
     - name: Get replication info for VM
       scale_computing.hypercore.vm_replication_info:
