--- a/tests/integration/targets/vm_replication/tasks/main.yml
+++ b/tests/integration/targets/vm_replication/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - environment:
-    SC_HOST: "https://10.5.11.30"
-    SC_USERNAME: "admin"
-    SC_PASSWORD: "admin"
+    SC_HOST: "{{ sc_host }}"
+    SC_USERNAME: "{{ sc_username }}"
+    SC_PASSWORD: "{{ sc_password }}"
 
   block:
     - name: Delete XLAB-vm_replication_CI_test
